--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "grommet-icons": "^4.13.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "simple-icons": "^15.1.0",
     "tailwindcss": "^4.1.8"
   },
   "devDependencies": {
