--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.7.2",
     "@iconify/react": "^6.0.0",
     "@tailwindcss/vite": "^4.1.8",
     "grommet-icons": "^4.13.0",
