--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@iconify/react": "^6.0.0",
     "@tailwindcss/vite": "^4.1.8",
+    "embla-carousel": "^8.6.0",
+    "embla-carousel-autoplay": "^8.6.0",
+    "embla-carousel-react": "^8.6.0",
+    "embla-carousel-vue": "^8.6.0",
     "grommet-icons": "^4.13.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
